# teddy_osc

./: .gitignore  README.md  appveyor.yml  egg_new.txt  elements_data.csv  log.txt  pyproject.toml  requirements.txt
src/: main.py  metrics.py  preprocess.py  processor.py  utils.py
