[project]
name = "teddy-osc"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Jhonatan Quihuiri", email = "jhonatan.quihuiri@gmail.com" }
]
dependencies = [
  "flet==0.28.3",
  "kaleido==1.0.0",
  "numpy==2.3.2",
  "pandas==2.3.1",
  "plotly==6.2.0",
  "python-osc==1.9.3",
  "pyinstaller==6.14.2"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.teddyosc"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "teddy-osc"

# company name to display in about app dialogs
company = "Teddy OSC"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Teddy OSC"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}